# Ziren

./: Cargo.toml
.github/workflows/: build.yml  mdbook.yml
crates/core/executor/: Cargo.toml
crates/core/executor/src/: air.rs  context.rs  dependencies.rs  executor.rs  instruction.rs  io.rs  lib.rs  memory.rs  opcode.rs  program.rs  programs.rs  record.rs  report.rs  state.rs  subproof.rs
crates/core/machine/: Cargo.toml
crates/core/machine/src/: io.rs  lib.rs
crates/curves/src/: polynomial.rs
crates/curves/src/edwards/: mod.rs
crates/curves/src/weierstrass/: bls12_381.rs  bn254.rs  mod.rs  secp256k1.rs
crates/primitives/src/: lib.rs
crates/prover/: Cargo.toml
crates/prover/scripts/: build_compress_vks.rs  fibonacci_groth16.rs  fibonacci_sweep.rs
crates/prover/src/: build.rs  lib.rs  types.rs  utils.rs  verify.rs
crates/recursion/compiler/: Cargo.toml
crates/sdk/src/: lib.rs
crates/stark/: Cargo.toml
crates/stark/src/: bb31_poseidon2.rs  chip.rs  folder.rs  lib.rs  machine.rs  opts.rs  permutation.rs  prover.rs  quotient.rs  septic_curve.rs  septic_digest.rs  septic_extension.rs  types.rs  verifier.rs
crates/test-artifacts/programs/: Cargo.toml
crates/test-artifacts/src/: lib.rs
docs/: index.html
docs/src/: SUMMARY.md  chapter_template.md
docs/src/dev/: overview.md  trust-setup.md
docs/src/introducation/: overview.md
docs/src/mips-vm/: emulator.md  mips-vm.md
docs/src/template/: examples.md  overview.md
examples/: Cargo.toml
examples/aggregation/host/: Cargo.toml
examples/aggregation/host/src/: main.rs
examples/compress/host/: Cargo.toml  build.rs
examples/compress/host/src/: main.rs
examples/fibonacci/script/: Cargo.toml  build.rs
examples/revme/guest/: Cargo.toml
examples/revme/guest/src/: main.rs
(+187 files in other folders)
