[package]
name = "aggregation-host"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
zkm-sdk = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
zkm-build = { workspace = true }
