[package]
name = "compress-host"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
zkm-prover = { workspace = true, features = ["debug"] }
zkm-stark = { workspace = true }
zkm-sdk = { workspace = true }
zkm-recursion-core = { workspace = true }
zkm-recursion-circuit = { workspace = true }
zkm-recursion-compiler = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.140"

[build-dependencies]
zkm-build = { workspace = true }

[features]
default = ["debug"]
debug = []
